ajouts route et pages

--- a/src/app/moduleAdmin/component/sidebar-dashboard/sidebar-dashboard.component.html
+++ b/src/app/moduleAdmin/component/sidebar-dashboard/sidebar-dashboard.component.html
@@ -6,7 +6,7 @@
       </a>
     </li>
     <li class="nav-item mb-3">
-      <a routerLink="/admin/catalogue"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/catalogue')">
+      <a routerLink="/admin/products"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/catalogue')">
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/pc-display.svg" alt="Catalogue"> Catalogue des Produits
       </a>
     </li>
@@ -16,17 +16,17 @@
       </a>
     </li>
     <li class="nav-item mb-3">
-      <a routerLink="/admin/commande"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/commande')">
+      <a routerLink="/admin/orders"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/commande')">
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/bag.svg" alt="Orders"> Liste des commandes
       </a>
     </li>
     <li class="nav-item mb-3">
-      <a routerLink="/admin/registreUtilisateur"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/registreUtilisateur')">
+      <a routerLink="/admin/users"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('admin/registreUtilisateur')">
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/people.svg" alt="Users"> Registre des Utilisateurs
       </a>
     </li>
     <li class="nav-item mb-3">
-      <a routerLink="/admin/magasin"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('/admin/magasin')">
+      <a routerLink="/admin/stores"  routerLinkActive="active" class="nav-link" [class.link-body-emphasis]="!isActive('/admin/magasin')">
         <img class="icon me-2" src="/assets/admin/assets/svgIcon/buildings.svg" alt="Shops"> Gestion des Magasins
       </a>
     </li>
