--- a/src/app/moduleAdmin/component/main-container/main-container.component.html
+++ b/src/app/moduleAdmin/component/main-container/main-container.component.html
@@ -1,6 +1,11 @@
-<div class="container-fluid p-0">
+
+<div class="container-fluid p-0  ">
   <div class="row g-0">
-    <app-sidebar-dashboard></app-sidebar-dashboard>
-    <app-off-caneva-dashboard></app-off-caneva-dashboard>
+    <app-sidebar-dashboard class="col-2 col-lg-2 "></app-sidebar-dashboard>
+    <app-off-caneva-dashboard class="col-9 col-lg-10 d-lg-none"></app-off-caneva-dashboard>
+    <div class="col-10">
+      <app-main-card></app-main-card>
+    </div>
+
   </div>
 </div>
