--- a/src/app/moduleAdmin/style-admin.css
+++ b/src/app/moduleAdmin/style-admin.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
+
 }
 
 .navbar {
@@ -121,11 +122,16 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
 .chart-container{
   position: relative;
   height:275px;
   max-width: 100%;
   overflow: hidden
+}
+.app-main-card {
+  width: 100%; /* Ensure the main card takes the full width of its container */
+  height: 100%; /* Ensure the main card takes the full height of its container */
 }
 
 /* Media Queries for Responsive Adjustments */
