-m"je me suis mis des commentaire et jai declarer des services support et login"
je me suis ajouter des commentaire et jai declarer des services pour
support et login

--- a/src/app/pages/acceuil-lion/acceuil-lion.component.html
+++ b/src/app/pages/acceuil-lion/acceuil-lion.component.html
@@ -11,7 +11,7 @@
     </div>
 
 
-    <div class="carousel-inner">
+    <div class="carousel-inner"> <!--Check if ngFor might used to display the carousel images-->
 
         <div class="carousel-item active c-item">
             <img src="/assets/images/promo/promo.jpg" class="d-block w-100 c-image" alt="...">
@@ -38,8 +38,8 @@
     </button>
 </div>
 
-<!--Categories, which i have to make more responsive-->
-        <div class="container">
+
+        <div class="container"> <!--Check if ngFor could be used to display the Categories-->
             <h1>Categories</h1>
             <div class="row gy-5 d-flex align-items-stretch ">
         
