--- a/src/app/pages/login-lion/login-lion.component.html
+++ b/src/app/pages/login-lion/login-lion.component.html
@@ -7,7 +7,8 @@
 
 
 
-
+<!--Check with the mock list of users as well-->
+<!--Check if the ngIf is what is needed to validate the entry for a User-->
 <div class="login">
     <div class="container">
         <div class="row justify-content-center">
@@ -35,8 +36,6 @@
                         Create an account
                     </button>
                 </form>
-
-
             </div>
         </div>
     </div>
