--- a/src/app/shared/footer-lion/footer.component.html
+++ b/src/app/shared/footer-lion/footer.component.html
@@ -27,9 +27,9 @@
                         <a href="#!" class="text-reset">About Us</a>
                     </p>
                     <p>
-                        <a href="#!" class="text-reset">Contact Us</a>
+                        <a routerLink="/support" class="text-reset">Contact Us</a>
                     </p>
-
+                    
                 </div>
             </div>
             <!-- Grid row -->
