--- a/src/app/moduleAdmin/pages/layout/admin-layout/admin-layout.component.html
+++ b/src/app/moduleAdmin/pages/layout/admin-layout/admin-layout.component.html
@@ -1,2 +1,4 @@
 <app-header-dashboard></app-header-dashboard>
-<app-main-container class="container-fluid"></app-main-container>
+<app-main-container></app-main-container>
+
+
