--- a/src/app/shared/footer-lion/footer.component.html
+++ b/src/app/shared/footer-lion/footer.component.html
@@ -1,3 +1,4 @@
+
 <footer class="text-center text-lg-start bg-body-tertiary text-muted d-none d-md-block">
     <!-- Section: Links  -->
     <section class="" style="background-color: #4165C0;">
@@ -24,12 +25,12 @@
                         Corporate
                     </h6>
                     <p>
-                        <a href="#!" class="text-reset">About Us</a>
+                        <a href="#" class="text-reset">About Us</a>
                     </p>
                     <p>
                         <a routerLink="/support"  class="text-reset">Contact Us</a>
                     </p>
-                    
+
                 </div>
             </div>
             <!-- Grid row -->
@@ -44,3 +45,4 @@
     </div>
     <!-- Copyright -->
 </footer>
+
