--- a/src/app/moduleAdmin/component/off-caneva-dashboard/off-caneva-dashboard.component.html
+++ b/src/app/moduleAdmin/component/off-caneva-dashboard/off-caneva-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="offcanvas offcanvas-start d-lg-flex flex-column offnav vh-100" tabindex="-1" id="sidebar">
+<div class="offcanvas offcanvas-start d-lg-flex flex-column offnav vh-100 vw-100" tabindex="-1" id="sidebar">
   <div class="offcanvas-header d-lg-none mt-3 mb-5">
     <h5 class="offcanvas-title">Menu</h5>
     <button type="button" class="btn-close text-reset me-1" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -45,7 +45,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link link-body-emphasis">
+        <a href="#" class="nav-link link-body-emphasis mt-3">
           <img src="/assets/admin/assets/leave-3.svg" alt="sign-out" class="icon-nav me-2">
           Déconnections
         </a>
