--- a/src/app/moduleAdmin/component/sidebar-dashboard/sidebar-dashboard.component.html
+++ b/src/app/moduleAdmin/component/sidebar-dashboard/sidebar-dashboard.component.html
@@ -40,7 +40,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a href="#" class="nav-link link-body-emphasis">
+        <a href="#" class="nav-link link-body-emphasis mt-3">
           <img src="/assets/admin/assets/leave-3.svg" alt="Logout" class="icon-nav me-2"> Déconnections
         </a>
       </li>
