--- a/src/app/moduleAdmin/component/main-card/main-card.component.html
+++ b/src/app/moduleAdmin/component/main-card/main-card.component.html
@@ -4,6 +4,8 @@
   </div>
   <div class="card p-4">
     <button *ngIf="isNotIndex" type="button" class="btn btn-primary mb-5 mt-2 ms-auto btn-add" data-bs-toggle="modal" data-bs-target="#modalAjout">{{ajout}}</button>
-    
+    <div class="container-fluid my-4 ">
+      <app-table-dashboard></app-table-dashboard>
+    </div>
 </div>
 </div>
