--- a/src/app/moduleAdmin/component/main-card/main-card.component.html
+++ b/src/app/moduleAdmin/component/main-card/main-card.component.html
@@ -5,7 +5,15 @@
   <div class="card p-4">
     <button *ngIf="isNotIndex" type="button" class="btn btn-primary mb-5 mt-2 ms-auto btn-add" data-bs-toggle="modal" data-bs-target="#modalAjout">{{ajout}}</button>
     <div class="container-fluid my-4 ">
-      <app-table-dashboard></app-table-dashboard>
+      <app-table-dashboard
+      *ngIf="isNotIndex"
+      [displayColumns]="displayColumns"
+      [dataBinding]="data"
+      [columnNames]="columnNames"
+      (editEvent)="onEdit($event)"
+      (detailsEvent)="onDetails($event)"
+      (deleteEvent)="onDelete($event)"
+      ></app-table-dashboard>
     </div>
 </div>
 </div>
