--- a/src/app/moduleAdmin/component/table-dashboard/table-dashboard.component.html
+++ b/src/app/moduleAdmin/component/table-dashboard/table-dashboard.component.html
@@ -7,7 +7,9 @@
   </thead>
   <tbody id="table-body">
   <tr *ngFor="let row of dataBinding">
-    <td *ngFor="let column of displayColumns">{{row[column]}}</td>
+    <td *ngFor="let column of displayColumns">
+      {{column==='category'?row.category.id:row[column]}}
+    </td>
     <td>
       <app-action-link-dashboard
       [id]="row.id"
