--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -36,20 +36,14 @@
     </div>
 </nav>
 <div class="categoryNav container-fluid d-md-flex justify-content-center py-1 gap-4 d-none">
-    <a class="categoryShortcut" style="font-weight: bold;" href="#">Offers</a>
-    <div class="separator"></div>
-    <a class="categoryShortcut" href="#">Desktops</a>
-    <div class="separator"></div>
-    <a class="categoryShortcut" href="#">Laptops</a>
-    <div class="separator"></div>
-    <a class="categoryShortcut" href="#">Monitors</a>
-    <div class="separator"></div>
-    <a class="categoryShortcut" href="#">Phones</a>
-    <div class="separator"></div>
-    <a class="categoryShortcut" href="#">Headphones</a>
+    <div *ngFor="let cat of listCategory; let i = index" class="d-flex gap-4">
+        <a class="categoryShortcut" [routerLink]="['products']" 
+        [innerHTML]="cat.id === 'CAT111' ? '<b>' + cat.name + '</b>' : cat.name"></a>
+        <div *ngIf="i < listCategory.length - 1" class="separator"></div>
+    </div>
 </div>
 
-<div class="categoryNav d-flex d-md-none container-fluid justify-content-around fixed-bottom p-2">
+<div class="navbar d-flex d-md-none container-fluid justify-content-around fixed-bottom p-2">
     <a class="btnIcon text-center" href="">
         <img class="imgIcon" src="assets/images/icons/home.svg" alt="home_icon">
     </a>
@@ -84,7 +78,7 @@
     </div>
 
     <div class="text-center d-flex flex-column mt-5 p-2 align-items-center gap-4">
-        
+
         <a href="#!" class="text-reset">About Us</a>
         <a href="#!" class="text-reset">Contact Us</a>
 
@@ -97,7 +91,7 @@
             <h6>
                 © 2024 Bisoux, Caresses et Popcorns aux chocolat !
             </h6>
-            
+
         </div>
     </div>
 </div>
