--- a/src/app/pages/detail-category-jean/cat-product-display/cat-product-display.component.html
+++ b/src/app/pages/detail-category-jean/cat-product-display/cat-product-display.component.html
@@ -1,3 +1,5 @@
-<p>cat-product-display works!</p>
-<app-product-filter-jean></app-product-filter-jean>
-<app-product-list-jean></app-product-list-jean>
+<div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 py-2" *ngIf="productsOfCategory.length > 0">
+    <app-product-filter-jean></app-product-filter-jean>
+    <app-product-list-jean *ngFor="let product of productsOfCategory"
+        [selectedProduct]="product"></app-product-list-jean>
+</div>
