--- a/src/app/moduleAdmin/component/action-link-dashboard/action-link-dashboard.component.html
+++ b/src/app/moduleAdmin/component/action-link-dashboard/action-link-dashboard.component.html
@@ -1,3 +1,3 @@
-<a  class="text-primary action-link " (click)="onEditClick()">Modifier |</a>
-<a  class="text-primary action-link" (click)="onDetailsClick()"> Details | </a>
-<a  class="text-primary action-link" (click)="onDeleteClick()"> Supprimer</a>
+<a class="text-primary action-link" [routerLink]="['/admin', entityType, 'details', id]">Détails |</a>
+<a class="text-primary action-link" [routerLink]="['/admin', entityType, 'modify', id]"> Modifier |</a>
+<a class="text-primary action-link" [routerLink]="['/admin', entityType, 'delete', id]" > Supprimer</a>
