--- a/src/app/moduleAdmin/component/main-card/main-card.component.html
+++ b/src/app/moduleAdmin/component/main-card/main-card.component.html
@@ -3,16 +3,14 @@
     <h1>{{headerText}}</h1>
   </div>
   <div class="card p-4">
-    <button *ngIf="isNotIndex" type="button" class="btn btn-primary mb-5 mt-2 ms-auto btn-add" data-bs-toggle="modal" data-bs-target="#modalAjout">{{ajout}}</button>
+    <button *ngIf="isNotIndex" type="button" routerLink="{{urlAjout}}" class="btn btn-primary mb-5 mt-2 ms-auto btn-add">{{ajout}}</button>
     <div class="container-fluid my-4 ">
       <app-table-dashboard class="table table-sm small-table table-bordered table-striped"
       *ngIf="isNotIndex"
       [displayColumns]="displayColumns"
       [dataBinding]="pageData"
       [columnNames]="columnNames"
-      (editEvent)="onEdit($event)"
-      (detailsEvent)="onDetails($event)"
-      (deleteEvent)="onDelete($event)"
+      [entityType]="entityType"
 
       ></app-table-dashboard>
       <app-pagination-dashboard
@@ -22,5 +20,8 @@
         (pageChange)="onPageChange($event)">
       </app-pagination-dashboard>
     </div>
+
 </div>
 </div>
+
+
