Jai du modifier mon service Acceuil-Carte-Categorie pour accomoder les images. Le routing a partir des images au pages des produits est fait

--- a/src/app/shared/header-jean/header.component.html
+++ b/src/app/shared/header-jean/header.component.html
@@ -18,7 +18,7 @@
                 </button>
             </div>
         </div>
-
+        <!--Buttons top-right of page-->
         <div class="d-none d-md-flex gap-5">
             <a class="btnIcon text-center" href="">
                 <img class="imgIcon" src="assets/images/icons/Shop.svg" alt="store_icon">
