--- a/src/app/pages/acceuil-lion/acceuil-lion.component.css
+++ b/src/app/pages/acceuil-lion/acceuil-lion.component.css
@@ -9,7 +9,16 @@
 
 }
 
-.card:hover{
+.card:hover {
     box-shadow: 0px 4px 6px rgba(22, 21, 21, 0.3);
     cursor: pointer;
+}
+
+.results {
+    display: grid;
+    column-gap: 14px;
+    row-gap: 14px;
+    grid-template-columns: repeat(auto-fill, minmax(400px, 400px));
+    margin-top: 50px;
+    justify-content: space-around;
 }
