--- a/src/app/pages/acceuil-lion/acceuil-lion.component.html
+++ b/src/app/pages/acceuil-lion/acceuil-lion.component.html
@@ -37,9 +37,17 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+    
+<section class="results">
+    <app-carte-categorie
+        *ngFor="let i of acceuilCarteList"
+        [acceuilCarteInput]="i">
+    </app-carte-categorie>
+</section>
 
-
-        <div class="container"> <!--Check if ngFor could be used to display the Categories-->
+        <!--Check if ngFor could be used to display the Categories-->
+        <!--
+        <div class="container"> 
             <h1>Categories</h1>
             <div class="row gy-5 d-flex align-items-stretch ">
         
@@ -98,7 +106,7 @@
                 </div>
 
             </div>
-        </div>
+        </div>-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
