work in progress on detail Product

--- a/src/app/pages/detail-product-jean/detail-product-child-jean/quantity-and-cart-btn-jean/quantity-and-cart-btn-jean.component.html
+++ b/src/app/pages/detail-product-jean/detail-product-child-jean/quantity-and-cart-btn-jean/quantity-and-cart-btn-jean.component.html
@@ -1,1 +1,9 @@
-<p>quantity-and-cart-btn-jean works!</p>
+<div class="d-flex align-items-center justify-content-around my-3">
+    <div class="d-flex quantity my-4">
+        <img class="btnQty lessQty" src="assets/images/icons/dash-circle.svg" alt="less" (click)="removeQty()">
+        <input type="number" [(ngModel)]="txtQty" class="txtQty text-center fw-bold form-control mx-2"
+        style="width: 70px;" min="1" max="5" (change)="onQtyManualyChanged()">
+        <img class="btnQty plusQty" src="assets/images/icons/plus-circle-fill.svg" alt="plus" (click)="addQty()">
+    </div>
+    <button class="btnAdd btn" (click)="addToCart()">Add to Cart</button>
+</div>
