--- a/src/app/pages/detail-product-jean/detail-product-parent-jean/detail-product-parent-jean.component.html
+++ b/src/app/pages/detail-product-jean/detail-product-parent-jean/detail-product-parent-jean.component.html
@@ -1,1 +1,9 @@
-<p>detail-product-parent-jean works!</p>
+<div class="container my-5">
+    <div class="row flex-lg-row">
+        <app-picture-section-jean></app-picture-section-jean>
+        <app-quick-description-product-jean></app-quick-description-product-jean>
+    </div>
+    <div class="row mt-5">
+        <app-tab-detail-jean></app-tab-detail-jean>
+    </div>
+</div>
