--- a/src/app/pages/detail-product-jean/detail-product-child-jean/picture-section-jean/picture-section-jean.component.html
+++ b/src/app/pages/detail-product-jean/detail-product-child-jean/picture-section-jean/picture-section-jean.component.html
@@ -1,1 +1,12 @@
-<p>picture-section-jean works!</p>
+<div class="col-lg-1 order-lg-1 order-2">
+    <div class="pictureCollection d-flex flex-lg-column gap-3">
+        <img src="https://picsum.photos/id/237/300/200" alt="Monitor 1" (click)="changeMainPicture($event)">
+        <img src="https://picsum.photos/id/235/300/200" alt="Monitor 2" (click)="changeMainPicture($event)">
+        <img src="https://picsum.photos/id/230/300/200" alt="Monitor 3" (click)="changeMainPicture($event)">
+    </div>
+</div>
+<div class="col-lg-6 order-lg-2 order-1 mb-3">
+    <div class="mainPicture">
+        <img [src]="mainSource" [alt]="mainAlt">
+    </div>
+</div>
