--- a/src/app/pages/detail-product-jean/detail-product-child-jean/quick-description-product-jean/quick-description-product-jean.component.html
+++ b/src/app/pages/detail-product-jean/detail-product-child-jean/quick-description-product-jean/quick-description-product-jean.component.html
@@ -1,1 +1,40 @@
-<p>quick-description-product-jean works!</p>
+<div class="productPresentation col-lg-5 order-3">
+    <h2 class="fw-bold">Monitor Lenovo 17” HDMI 2.0 USB-A 40Hz</h2>
+    <p><span class="stars text-warning h3">&#9733;&#9733;&#9733;&#9734;&#9734;</span> (21 avis)</p>
+    <h1 class="txtPrice">$145,99 <del class="text-muted h6">$160</del></h1>
+    <div>
+        <table class="quickSpecs ms-5 my-3">
+            <tbody>
+                <tr>
+                    <th>Brand</th>
+                    <td>lenovo</td>
+                </tr>
+                <tr>
+                    <th>Size</th>
+                    <td>14.91 x 10.19 x 3.74 po (H x W x D)</td>
+                </tr>
+                <tr>
+                    <th>Resolution</th>
+                    <td>1280 x 720</td>
+                </tr>
+                <tr>
+                    <th>Variant</th>
+                    <td>
+                        <div class="btn-group variantOptions" role="group" aria-label="Basic radio toggle button group">
+                            <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off"
+                                checked>
+                            <label class="btn " for="btnradio1">Black</label>
+
+                            <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+                            <label class="btn " for="btnradio2">White</label>
+
+                            <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+                            <label class="btn " for="btnradio3">Silver</label>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <app-quantity-and-cart-btn-jean></app-quantity-and-cart-btn-jean>
+</div>
