ajout du component detail produit

--- a/src/app/pages/detail-product-jean/detail-product-child-jean/quantity-and-cart-btn-jean/quantity-and-cart-btn-jean.component.css
+++ b/src/app/pages/detail-product-jean/detail-product-child-jean/quantity-and-cart-btn-jean/quantity-and-cart-btn-jean.component.css
@@ -14,3 +14,8 @@
     background-color: rgba(16, 60, 172, 1);
     border-radius: 30px;
 }
+
+h2, small {
+    color: rgba(16, 60, 172, 1);
+    cursor: default;
+}
