--- a/src/app/pages/detail-product-jean/detail-product-child-jean/quick-description-product-jean/quick-description-product-jean.component.css
+++ b/src/app/pages/detail-product-jean/detail-product-child-jean/quick-description-product-jean/quick-description-product-jean.component.css
@@ -15,3 +15,25 @@
 .variantOptions {
     color: rgba(16, 60, 172, 1);
 }
+
+/* Responsive image */
+@media (max-width: 992px) {
+    .pictureCollection {
+        overflow-x: auto;
+        padding: 10px 0;
+    }
+
+    .pictureCollection img {
+        flex: 0 0 auto;
+        width: 100px;
+        margin-right: 10px;
+    }
+}
+
+.pictureCollection {
+    cursor: pointer;
+}
+
+.mainPicture img {
+    width: 100%;
+}
