--- a/src/app/pages/detail-product-jean/detail-product-parent-jean/detail-product-parent-jean.component.html
+++ b/src/app/pages/detail-product-jean/detail-product-parent-jean/detail-product-parent-jean.component.html
@@ -1,9 +1,6 @@
 <div class="container my-5">
-    <div class="row flex-lg-row">
-        <app-picture-section-jean></app-picture-section-jean>
-        <app-quick-description-product-jean></app-quick-description-product-jean>
-    </div>
+        <app-quick-description-product-jean [product]="product"></app-quick-description-product-jean>
     <div class="row mt-5">
-        <app-tab-detail-jean></app-tab-detail-jean>
+        <app-tab-detail-jean [product]="product"></app-tab-detail-jean>
     </div>
 </div>
