--- a/src/app/moduleAdmin/pages/produitSection/product-delete/product-delete.component.html
+++ b/src/app/moduleAdmin/pages/produitSection/product-delete/product-delete.component.html
@@ -4,9 +4,15 @@
     <div class="col-lg-6 mx-auto">
 
       <div class="modal-body">
-        Voulez vous supprimer le produit. Attention l'action est permanante
+        Voulez vous supprimer le produit: <span><br>
+        <ul class="mt-3 mb-3">
+          <li><strong>{{produit?.name}}</strong></li>
+          <li><strong>{{produit?.category?.name}}</strong></li>
+          <li><strong> {{produit?.description}}</strong> </li>
+        </ul>
+      </span>  Attention l'action est permanante
       </div>
-      <div class="modal-footer">
+      <div >
         <div class="container mt-5">
           <div [ngClass]="{'active': isDelete,'visually-hidden':!isDelete}" class="alert alert-success " role="alert">
             La suppression a ete effectuer avec succès
