--- a/src/app/shared/footer-lion/footer.component.html
+++ b/src/app/shared/footer-lion/footer.component.html
@@ -25,6 +25,7 @@
                         Corporate
                     </h6>
                     <p>
+                        <!--Il nous restera a implementer le about us une fois la page fait-->
                         <a href="#" class="text-reset">About Us</a>
                     </p>
                     <p>
