ajouts attribut role dans User et implementation table user

--- a/src/app/moduleAdmin/component/table-dashboard/table-dashboard.component.html
+++ b/src/app/moduleAdmin/component/table-dashboard/table-dashboard.component.html
@@ -8,7 +8,7 @@
   <tbody id="table-body">
   <tr *ngFor="let row of dataBinding">
     <td *ngFor="let column of displayColumns">
-      {{column==='category'?row.category.id:row[column]}}
+      {{getColumnValue(row, column)}}
     </td>
     <td>
       <app-action-link-dashboard
