--- a/src/app/moduleAdmin/pages/CategorySection/categories-delete/categories-delete.component.html
+++ b/src/app/moduleAdmin/pages/CategorySection/categories-delete/categories-delete.component.html
@@ -4,7 +4,7 @@
     <div class="col-lg-6 mx-auto">
 
       <div class="body">
-        Voulez vous supprimer la catégorie: {{category?.name}} . Attention l'action est permanante
+        Voulez vous supprimer la catégorie: <strong> {{category?.name}}</strong>.<br>Attention l'action est permanante
       </div>
       <div>
         <div class="container mt-5">
