Les page Users Terminer

--- a/src/app/moduleAdmin/pages/produitSection/product-modify/product-modify.component.html
+++ b/src/app/moduleAdmin/pages/produitSection/product-modify/product-modify.component.html
@@ -89,8 +89,9 @@
 
       </form>
 
-      <div class="d-grid gap-2 d-md-flex justify-content-md-start mx-5 mt-5">
-        <button routerLink="/admin/products" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Retour</button>
+      <div class="d-grid gap-2 d-md-flex justify-content-start mt-5">
+        <button routerLink="/admin/products" type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
+        <button type="button" class="btn btn-success btn-lg px-4 me-md-2" (click)="modifyProduit()">Modifier</button>
       </div>
     </div>
   </div>
