--- a/src/app/moduleAdmin/component/main-card/main-card.component.html
+++ b/src/app/moduleAdmin/component/main-card/main-card.component.html
@@ -3,7 +3,8 @@
     <h1>{{headerText}}</h1>
   </div>
   <div class="card p-4">
-    <button *ngIf="isNotIndex" type="button" routerLink="{{urlAjout}}" class="btn btn-primary mb-5 mt-2 ms-auto btn-add">{{ajout}}</button>
+    <button *ngIf="isNotIndex" type="button" routerLink="{{urlAjout}}" class="btn btn-primary mb-3 mt-2 ms-auto btn-add">{{ajout}}</button>
+    <button *ngIf="isUser" class="btn btn-outline-info mb-5 mt-2 ms-auto btn-add" (click)="viewDeactivatedUser()">{{toggle}}</button>
     <div class="container-fluid my-4 ">
       <app-table-dashboard class="table table-sm small-table table-bordered table-striped"
       *ngIf="isNotIndex"
