--- a/src/app/moduleAdmin/pages/CategorySection/categories-delete/categories-delete.component.html
+++ b/src/app/moduleAdmin/pages/CategorySection/categories-delete/categories-delete.component.html
@@ -13,7 +13,7 @@
           </div>
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-center mx-5 mt-5">
-          <button type="button" class="btn btn-secondary" routerLink="/admin/categories">Fermer</button>
+          <button type="button" class="btn btn-secondary" routerLink="/admin/categories">Retour</button>
           <button type="button" class="btn btn-danger" (click)="deleteCategory()">Supprimer</button>
         </div>
       </div>
