--- a/src/app/moduleAdmin/pages/CategorySection/categories-modify/categories-modify.component.html
+++ b/src/app/moduleAdmin/pages/CategorySection/categories-modify/categories-modify.component.html
@@ -18,8 +18,9 @@
         </div>
       </form>
 
-      <div class="d-grid gap-2 d-md-flex justify-content-md-start mx-5 mt-5">
-        <button routerLink="/admin/categories" type="button" class="btn btn-primary btn-lg px-4 me-md-2">Retour</button>
+      <div class="d-grid gap-2 d-md-flex justify-content-start mt-5">
+        <button routerLink="/admin/categories" type="button" class="btn btn-secondary btn-lg px-4 me-md-2">Retour</button>
+        <button type="button" class="btn btn-success btn-lg px-4 me-md-2" (click)="modifyCategory()">Modifier</button>
       </div>
     </div>
   </div>
