--- a/src/app/moduleAdmin/pages/produitSection/product-delete/product-delete.component.html
+++ b/src/app/moduleAdmin/pages/produitSection/product-delete/product-delete.component.html
@@ -19,7 +19,7 @@
           </div>
         </div>
         <div class="d-grid gap-2 d-md-flex justify-content-md-center mx-5 mt-5">
-          <button type="button" class="btn btn-secondary" routerLink="/admin/products">Fermer</button>
+          <button type="button" class="btn btn-secondary" routerLink="/admin/products">Retour</button>
           <button type="button" class="btn btn-danger" (click)="deleteProduct()" >Supprimer</button>
         </div>
       </div>
